--- a/app/routes/home/intro.module.css
+++ b/app/routes/home/intro.module.css
@@ -31,6 +31,12 @@
   @media (max-width: 820px) and (max-height: 420px) {
     top: calc(var(--spaceM) * -1);
   }
+
+  @media (max-width: 600px) {
+    max-width: 100%;
+    padding: 0 var(--spaceOuter, 16px);
+    white-space: normal;
+  }
 }
 
 .name {
